Temperature converter logic

--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
 
         <div class="col-12 col-md-4 input-div">
           <label class=" lab">Celcius</label><br>
-          <input type="number" value="0" id="cel" class="inp">
+          <input placeholder="Celcius" type="number" value="0" id="cel" class="inp">
         </div>
         <div class="col-12 col-md-4">
           <label class="lab">Fahrenheit</label><br>
-          <input type="number" value="30" id="fah" class="inp">
+          <input placeholder="Fahrenheit" type="number" value="30" id="fah" class="inp">
 
         </div>
 
