--- a/index.html
+++ b/index.html
@@ -46,11 +46,20 @@
 
         </div>
 
+        
+
       </div>
     </div>
 
+
+  </div>
+
+  <div class="footer-section-copyright-container">
+    <i class="fa fa-copyright icon" aria-hidden="true"></i>
+    <span class="footer-section-text">2023 by Anusha. Created with Javascript.</span>
   </div>
   </div>
+  
   <script src="logic.js"></script>
 
 
